--- a/src/blocks/roadmap/roadmap.scss
+++ b/src/blocks/roadmap/roadmap.scss
@@ -1,40 +1,99 @@
 .roadmap {
 	$self: &;
+	overflow: hidden;
+	position: relative;
+
+	&__blaster {
+		position: absolute;
+		z-index: 1;
+		width: 450px;
+		height: 280px;
+		background: url('#{$images-path}roadmap-blaster.png') center / contain no-repeat transparent;
+		top: 260px;
+		right: -50px;
+	}
 
 	&__inner {
-
+		padding-top: 140px;
+		padding-bottom: 140px;
+		position: relative;
+		z-index: 2;
 	}
 
 	&__top {
-
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
+		margin-bottom: 73px;
 	}
 
 	&__top-title {
-
+		grid-column: span 3;
 	}
-
+	
 	&__top-text {
-
+		grid-column: 5 / span 6;
+		max-width: 620px;
+		line-height: 1.5;
+		margin: 0 auto;
 	}
 
 	&__cards {
-
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
+		grid-gap: 0 40px;
 	}
 
 	&__card {
+		grid-column: span 5;
+		box-sizing: border-box;
+		padding: 26px 70px 26px;
+		border-radius: 30px;
+		background-color: #FFFEE4;
+		border: 2px solid black;
+		border-bottom-width: 7px;
+		
+		&:nth-child(1) {
+			grid-column: 1 / span 5;
+		}
+		
+		&:nth-child(2) {
+			grid-column: 3 / span 5;
+		}
+		
+		&:nth-child(3) {
+			grid-column: 6 / span 5;
+		}
+		
+		&:nth-child(4) {
+			grid-column: 8 / span 5;
+		}
 
+		&:not(:first-child) {
+			margin-top: -191px;
+		}
 	}
 
 	&__date {
-
+		color: #F83821;
+		font-family: "BS", sans-serif;
+		text-transform: uppercase;
+		font-size: 28px;
+		margin-bottom: 7px;
 	}
-
+	
 	&__card-title {
-
+		font-family: "BS", sans-serif;
+		text-transform: uppercase;
+		font-size: 16px;
+		margin-bottom: 25px;
 	}
 
 	&__card-points {
-
+		padding-left: 25px;
+		line-height: 1.5;
+		
+		li {
+			list-style: disc;
+		}
 	}
-
 }
