--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -1,5 +1,5 @@
 <footer class="footer"> 
-	<div class="footer__inner">
+	<div class="footer__inner container">
 		<a class="footer__logo" href="./"><img src="./images/footer-logo.svg" alt=""></a>
 		<div class="footer__socials">
 			<a class="footer__social footer__social_tgm" href="./"></a>
@@ -9,7 +9,7 @@
 		</div>
 		<a class="footer__email" href="mailto:gogokaren@gmail.com">gogokaren@gmail.com</a>
 		<div class="footer__side">
-			<div class="footer__side-img"></div><img src="./images/footer-blooming.svg" alt=""></div>
+			<div class="footer__side-img"><img src="./images/footer-blooming.svg" alt=""></div>
 			<div class="footer__side-text">Brought to you by <a href="./">Blooming Design</a></div>
 		</div>
 	</div>
