--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -3,7 +3,7 @@
 		<a class="header__logo" href="./"><img src="./images/header-logo.svg" alt=""></a>
 		<div class="header__menu menu">
 			<a class="menu__item" href="./">About</a>
-			<a class="menu__item" href="./">Roadmaps</a>
+			<a class="menu__item" href="./">Roadmap</a>
 			<a class="menu__item" href="./">Contacts</a>
 		</div>
 	</div>
