--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,16 +1,23 @@
 .header {
 	$self: &;
+	position: relative;
+	z-index: 1;
 
 	&__inner {
-
+		display: flex;
+		min-height: 80px;
+		padding-right: 185px;
 	}
 
 	&__logo {
-
+		margin-right: 20px;
+		display: flex;
+		align-items: center;
 	}
 
 	&__menu {
-
+		margin: 0 auto;
+		width: 100%;
+		max-width: 365px;
 	}
-
 }
