--- a/src/blocks/partners/partners.scss
+++ b/src/blocks/partners/partners.scss
@@ -2,7 +2,19 @@
 	$self: &;
 
 	&__title {
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 840px;
+		margin: 0 auto 50px;
 
+		span:nth-child(2) {
+			margin: 0 30px;
+			color: #F83821;
+		}
+
+		span:nth-child(3) {
+			margin-left: auto;
+		}
 	}
 
 	&__type {
@@ -15,5 +27,4 @@
 			
 		}
 	}
-
 }
