--- a/src/blocks/feed/feed.scss
+++ b/src/blocks/feed/feed.scss
@@ -3,8 +3,80 @@
 	background: url('#{$images-path}feed-bg-top.png') left 20px top -120px / auto no-repeat, url('#{$images-path}feed-bg-bottom.png') right -320px bottom 120px / auto no-repeat, linear-gradient(to top, #fdd311 0%, #fffee4 100%);
 	padding-bottom: 45px;
 
-	&__inner {
+	&__flyer-1 {
+		background: url('#{$images-path}flyer-1.png') center / contain no-repeat transparent;
+		height: 170px;
+		width: 240px;
+		position: absolute;
+		top: 275px;
+		right: -125px;
+	}
 
+	&__flyer-2 {
+		background: url('#{$images-path}flyer-2.png') center / contain no-repeat transparent;
+		height: 145px;
+		width: 124px;
+		position: absolute;
+		top: 85px;
+		left: 30px;
+	}
+
+	&__flyer-3 {
+		background: url('#{$images-path}flyer-3.png') center / contain no-repeat transparent;
+		height: 45px;
+		width: 65px;
+		position: absolute;
+		top: 750px;
+		left: 130px;
+	}
+
+	&__flyer-4 {
+		background: url('#{$images-path}flyer-4.png') center / contain no-repeat transparent;
+		width: 50px;
+		height: 35px;
+		position: absolute;
+		top: 600px;
+		right: 45px;
+	}
+
+	&__flyer-5 {
+		background: url('#{$images-path}flyer-5.png') center / contain no-repeat transparent;
+		width: 100px;
+		height: 32px;
+		position: absolute;
+		top: 905px;
+		right: 335px;
+	}
+
+	&__flyer-6 {
+		background: url('#{$images-path}flyer-6.png') center / contain no-repeat transparent;
+		width: 90px;
+		height: 115px;
+		position: absolute;
+		bottom: 415px;
+		left: -5px;
+	}
+
+	&__flyer-7 {
+		background: url('#{$images-path}flyer-7.png') center / contain no-repeat transparent;
+		width: 90px;
+		height: 55px;
+		position: absolute;
+		bottom: 215px;
+		right: 30px;
+	}
+
+	&__flyer-8 {
+		background: url('#{$images-path}flyer-8.png') center / contain no-repeat transparent;
+		width: 110px;
+		height: 80px;
+		position: absolute;
+		bottom: -40px;
+		left: 207px;
+	}
+
+	&__inner {
+		position: relative;
 	}
 
 	&__block {
