--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -1,8 +1,20 @@
 .info {
 	$self: &;
-
+	overflow: hidden;
+	
+	&__binoculars {
+		position: absolute;
+		z-index: 1;
+		width: 370px;
+		height: 250px;
+		background: url('#{$images-path}info-binoculars.png') center / contain no-repeat transparent;
+		top: 20px;
+		left: -100px;
+	}
+	
 	&__inner {
-		padding-bottom: 100px;
+		position: relative;
+		padding-bottom: 150px;
 	}
 
 	&__items {
@@ -14,7 +26,7 @@
 	&__item {
 		grid-column: 4 / -2;
 		box-sizing: border-box;
-		padding: 35px 70px 35px;
+		padding: 35px 70px 25px;
 		border-radius: 30px;
 		background-color: #FFFEE4;
 		border: 2px solid black;
