--- a/src/blocks/roadmap/roadmap.scss
+++ b/src/blocks/roadmap/roadmap.scss
@@ -1,7 +1,6 @@
 .roadmap {
 	$self: &;
 	overflow: hidden;
-	position: relative;
 
 	&__blaster {
 		position: absolute;
@@ -9,8 +8,8 @@
 		width: 450px;
 		height: 280px;
 		background: url('#{$images-path}roadmap-blaster.png') center / contain no-repeat transparent;
-		top: 260px;
-		right: -50px;
+		top: 265px;
+		right: -100px;
 	}
 
 	&__inner {
@@ -70,6 +69,10 @@
 
 		&:not(:first-child) {
 			margin-top: -191px;
+		}
+
+		&:not(:last-child):hover {
+			z-index: 10;
 		}
 	}
 
