--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -7,6 +7,10 @@
 		display: flex;
 		min-height: 80px;
 		padding-right: 185px;
+
+		@include media('<=md') {
+			padding-right: 20px;
+		}
 	}
 
 	&__logo {
@@ -17,7 +21,9 @@
 
 	&__menu {
 		margin: 0 auto;
-		width: 100%;
-		max-width: 365px;
+	}
+
+	&__menu-toggle {
+
 	}
 }
