--- a/src/blocks/roadmap/roadmap.scss
+++ b/src/blocks/roadmap/roadmap.scss
@@ -34,6 +34,10 @@
 		max-width: 620px;
 		line-height: 1.5;
 		margin: 0 auto;
+		
+		@include media('<=xlg') {
+			grid-column: 6 / span 6;
+		}
 	}
 
 	&__cards {
